Update UI colors, initialize Firebase, and refactor Firestore
- Removed `Resources\Images\cartoon_food4.png` from `MAUIRecipeApp.csproj`.
- Added `FirebaseApp.InitializeApp(this);` to `OnCreate` in `MainActivity.cs`.
- Changed `BackgroundColor` of buttons from `Secondary` to `Primary` in:
  - `LoginPageView.xaml`
  - `NewPasswordPageView.xaml`
  - `PasswordRecoveryPageView.xaml`
  - `PasswordVerifyCodePageView.xaml`
  - `SignUpPageView.xaml`
  - `VerifyCodePageView.xaml`
- Updated `BorderColor` and `TextColor` of `Send again` buttons to `Primary` in:
  - `PasswordVerifyCodePageView.xaml`
  - `VerifyCodePageView.xaml`
- Added `FirestoreDb` instance to `HomePageViewModel.cs` and refactored methods to use it.
- Enhanced error handling in `LoadFoodRecipeTypes` method.

--- a/View/Auth/LoginPageView.xaml
+++ b/View/Auth/LoginPageView.xaml
@@ -77,7 +77,7 @@
             </Label>
             <Button
                 Margin="0,24,0,0"
-                BackgroundColor="{StaticResource Secondary}"
+                BackgroundColor="{StaticResource Primary}"
                 Command="{Binding LoginCommand}"
                 FontSize="18"
                 Text="Login"
