--- a/View/Auth/NewPasswordPageView.xaml
+++ b/View/Auth/NewPasswordPageView.xaml
@@ -93,7 +93,7 @@
 
             <Button
                 Margin="0,16,0,0"
-                BackgroundColor="{StaticResource Secondary}"
+                BackgroundColor="{StaticResource Primary}"
                 Command="{Binding ChangePasswordCommand}"
                 FontSize="18"
                 Text="Done"
