--- a/View/Auth/PasswordRecoveryPageView.xaml
+++ b/View/Auth/PasswordRecoveryPageView.xaml
@@ -39,7 +39,7 @@
 
             <Button
                 Margin="0,16,0,0"
-                BackgroundColor="{StaticResource Secondary}"
+                BackgroundColor="{StaticResource Primary}"
                 Command="{Binding SendCodeCommand}"
                 FontSize="20"
                 Text="Recover"
