--- a/View/Auth/VerifyCodePageView.xaml
+++ b/View/Auth/VerifyCodePageView.xaml
@@ -50,17 +50,17 @@
 
             <Button
                 Margin="0,12,0,0"
-                BackgroundColor="{StaticResource Secondary}"
+                BackgroundColor="{StaticResource Primary}"
                 Command="{Binding VerifyCodeCommand}"
                 FontSize="18"
                 Text="Verify"
                 TextColor="{StaticResource WhiteText}" />
             <Button
                 BackgroundColor="Transparent"
-                BorderColor="{StaticResource Secondary}"
+                BorderColor="{StaticResource Primary}"
                 FontSize="18"
                 Text="Send again"
-                TextColor="{StaticResource Secondary}" />
+                TextColor="{StaticResource Primary}" />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
