Add admin view and update dependencies
Introduced a new admin view (BackDropMainPageView) and its view model (BackDropMainPageViewModel). Updated AppShell.xaml and MauiProgram.cs to include the new view and its navigation route. Modified LoginPageViewModel to navigate to the admin view if credentials are "admin". Updated UraniumUI packages to version 2.10.1. Added new folder and XAML entry in the project file.

--- a/View/Auth/LoginPageView.xaml
+++ b/View/Auth/LoginPageView.xaml
@@ -44,6 +44,7 @@
                 BorderColor="{StaticResource PrimaryDarkText}"
                 CornerRadius="16"
                 FontSize="16"
+                Text="{Binding Email}"
                 TextColor="{StaticResource PrimaryDarkText}">
                 <material:TextField.Icon>
                     <FontImageSource FontFamily="MaterialSharp" Glyph="{x:Static m:MaterialSharp.Mail}" />
@@ -56,6 +57,7 @@
                 CornerRadius="16"
                 FontSize="16"
                 IsPassword="True"
+                Text="{Binding Password}"
                 TextColor="{StaticResource PrimaryDarkText}">
                 <material:TextField.Icon>
                     <FontImageSource FontFamily="MaterialSharp" Glyph="{x:Static m:MaterialSharp.Lock}" />
