--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -3,6 +3,7 @@
     x:Class="MAUIRecipeApp.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:AdminView="clr-namespace:MAUIRecipeApp.View.AdminView"
     xmlns:Auth="clr-namespace:MAUIRecipeApp.View.Auth"
     xmlns:UserView="clr-namespace:MAUIRecipeApp.View.UserView"
     xmlns:View="clr-namespace:MAUIRecipeApp.View"
@@ -18,6 +19,7 @@
     <ShellContent ContentTemplate="{DataTemplate Auth:VerifyCodePageView}" Route="verifycode" />
     <ShellContent ContentTemplate="{DataTemplate Auth:NewPasswordPageView}" Route="newpassword" />
     <ShellContent ContentTemplate="{DataTemplate UserView:HomePageView}" Route="home" />
+    <ShellContent ContentTemplate="{DataTemplate AdminView:BackDropMainPageView}" Route="adminhome" />
 
 
 
