--- a/View/AdminView/RecipesPageView.xaml
+++ b/View/AdminView/RecipesPageView.xaml
@@ -3,7 +3,8 @@
     x:Class="MAUIRecipeApp.View.AdminView.RecipesPageView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="RecipesPageView">
+    Title="RecipesPageView"
+    Shell.NavBarIsVisible="False">
     <VerticalStackLayout>
         <Label
             HorizontalOptions="Center"
