--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -71,9 +71,9 @@
                     Glyph="{x:Static m:MaterialSharp.Person}"
                     Color="{StaticResource WhiteText}" />
             </Tab.Icon>
-            <ShellContent Title="User" ContentTemplate="{DataTemplate AdminView:IngredientsPageView}" />
-            <ShellContent Title="UserInfo" ContentTemplate="{DataTemplate AdminView:IngredientsPageView}" />
-            <ShellContent Title="UserSavedRecipe" ContentTemplate="{DataTemplate AdminView:IngredientsPageView}" />
+            <ShellContent Title="User" ContentTemplate="{DataTemplate AdminView:EditUserPageView}" />
+            <ShellContent Title="UserInfo" ContentTemplate="{DataTemplate AdminView:EditUserInfoPageView}" />
+            <ShellContent Title="UserSavedRecipe" ContentTemplate="{DataTemplate AdminView:EditUserSavedRecipePageView}" />
         </Tab>
     </FlyoutItem>
 
@@ -85,9 +85,9 @@
                     Glyph="{x:Static m:MaterialSharp.Lunch_dining}"
                     Color="{StaticResource WhiteText}" />
             </Tab.Icon>
-            <ShellContent Title="FoodRecipe" ContentTemplate="{DataTemplate AdminView:IngredientsPageView}" />
-            <ShellContent Title="FoodRecipeType" ContentTemplate="{DataTemplate AdminView:IngredientsPageView}" />
-            <ShellContent Title="FoodRecipeMapping" ContentTemplate="{DataTemplate AdminView:IngredientsPageView}" />
+            <ShellContent Title="FoodRecipe" ContentTemplate="{DataTemplate AdminView:EditFoodRecipePageView}" />
+            <ShellContent Title="FoodRecipeType" ContentTemplate="{DataTemplate AdminView:EditFoodRecipeTypePageView}" />
+            <ShellContent Title="FoodRecipeMapping" ContentTemplate="{DataTemplate AdminView:EditFoodRecipeMappingPageView}" />
         </Tab>
 
     </FlyoutItem>
@@ -101,8 +101,8 @@
                     Glyph="{x:Static m:MaterialSharp.Grocery}"
                     Color="{StaticResource WhiteText}" />
             </Tab.Icon>
-            <ShellContent Title="Ingredients" ContentTemplate="{DataTemplate AdminView:IngredientsPageView}" />
-            <ShellContent Title="RecipeIngredients" ContentTemplate="{DataTemplate AdminView:IngredientsPageView}" />
+            <ShellContent Title="Ingredients" ContentTemplate="{DataTemplate AdminView:EditIngredientsPageView}" />
+            <ShellContent Title="RecipeIngredients" ContentTemplate="{DataTemplate AdminView:EditRecipeIngredientsPageView}" />
         </Tab>
 
     </FlyoutItem>
@@ -115,8 +115,8 @@
                     Glyph="{x:Static m:MaterialSharp.Other_admission}"
                     Color="{StaticResource WhiteText}" />
             </Tab.Icon>
-            <ShellContent Title="FoodRating" ContentTemplate="{DataTemplate AdminView:RecipesPageView}" />
-            <ShellContent Title="Temptable" ContentTemplate="{DataTemplate AdminView:RecipesPageView}" />
+            <ShellContent Title="FoodRating" ContentTemplate="{DataTemplate AdminView:EditFoodRatingPageView}" />
+            <ShellContent Title="Temptable" ContentTemplate="{DataTemplate AdminView:EditTempTablePageView}" />
         </Tab>
 
     </FlyoutItem>
