Add AdminHomePageView and ViewModel; update various views
Introduced AdminHomePageView and AdminHomePageViewModel for the admin home page. Updated AppShell.xaml to use AdminHomePageView for the adminhome route. Modified MAUIRecipeApp.csproj to include AdminHomePageView.xaml and remove admin_home_image.png. Registered AdminHomePageView and AdminHomePageViewModel in MauiProgram.cs. Removed BackdropView from BackDropMainPageView.xaml. Enhanced EditFoodRecipePageView.xaml with a ScrollView and data grids. Simplified StartUpPageView.xaml by removing ScrollView. Disabled Shell.FlyoutBehavior in FoodRecipePageView.xaml. Added properties and methods for loading food recipes from Firestore in EditFoodRecipePageViewModel.cs.

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -56,7 +56,7 @@
         Shell.FlyoutBehavior="Disabled"
         Shell.FlyoutItemIsVisible="False" />
     <ShellContent
-        ContentTemplate="{DataTemplate AdminView:BackDropMainPageView}"
+        ContentTemplate="{DataTemplate AdminView:AdminHomePageView}"
         Route="adminhome"
         Shell.FlyoutItemIsVisible="False" />
 
