Enhance UI and fix syntax issue
- App.xaml.cs: Override CreateWindow to set dimensions and min size.
- MauiProgram.cs: Add debug logging conditionally with #if DEBUG.
- Colors.xaml: Add new color definitions for "Primary" and "Gray".
- EditFoodRecipePageView.xaml: Add margin to DataGrid and new image column.
- EditFoodRecipeTypePageView.xaml: Overhaul layout with ScrollView, Grid, DataGrid, buttons, and search TextField.
- EditFoodRecipeTypePageViewModel.cs: Fix syntax issue with closing brace.

--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -19,6 +19,16 @@
     <Color x:Key="MidnightBlue">#190649</Color>
     <Color x:Key="OffBlack">#1f1f1f</Color>
 
+    <Color x:Key="Primary100">#EDF4D5</Color>
+    <Color x:Key="Primary200">#DBEAAB</Color>
+    <Color x:Key="Primary300">#C9E082</Color>
+    <Color x:Key="Primary400">#B7D558</Color>
+    <Color x:Key="Primary500">#9FBD48</Color>
+    <Color x:Key="Primary600">#7D9738</Color>
+    <Color x:Key="Primary900">#4A5C20</Color>
+    <Color x:Key="Primary950">#303B14</Color>
+
+
     <Color x:Key="Gray100">#E1E1E1</Color>
     <Color x:Key="Gray200">#C8C8C8</Color>
     <Color x:Key="Gray300">#ACACAC</Color>
