--- a/View/AdminView/EditFoodRecipeMappingPageView.xaml
+++ b/View/AdminView/EditFoodRecipeMappingPageView.xaml
@@ -7,13 +7,117 @@
     xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.AdminViewModel"
-    Title=""
+    xmlns:models="clr-namespace:MAUIRecipeApp.Models"
+    xmlns:dto="clr-namespace:MAUIRecipeApp.DTO"
+
+    Title="Edit Food Type Mapping"
     x:DataType="viewmodel:EditFoodRecipeMappingPageViewModel"
+    x:Name="PageRef"
     Background="{StaticResource WhiteText}">
-    <VerticalStackLayout>
-        <Label
-            HorizontalOptions="Center"
-            Text="Welcome to .NET Food Recipe Mapping!"
-            VerticalOptions="Center" />
-    </VerticalStackLayout>
+    <ScrollView>
+        <VerticalStackLayout Spacing="8">
+            <Grid Margin="16,8,16,0" VerticalOptions="Start">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <HorizontalStackLayout Grid.Column="0" Spacing="8">
+                    <Label
+                        Grid.ColumnSpan="2"
+                        FontAttributes="Bold"
+                        FontSize="24"
+                        HorizontalOptions="Center"
+                        Text="{Binding Source={x:Reference PageRef}, Path=Title}"
+                        TextColor="{StaticResource Primary}"
+                        VerticalOptions="Center" />
+
+                </HorizontalStackLayout>
+                <HorizontalStackLayout
+                    Grid.Column="1"
+                    HorizontalOptions="End"
+                    Spacing="8"
+                    VerticalOptions="Center">
+                    <Button
+                        Background="Aqua"
+                        FontAttributes="Bold"
+                        TextColor="{StaticResource WhiteText}"
+                        ToolTipProperties.Text="Edit">
+                        <Button.ImageSource>
+                            <FontImageSource
+                                FontFamily="MaterialSharp"
+                                Glyph="{x:Static m:MaterialSharp.Edit}"
+                                Size="20" />
+                        </Button.ImageSource>
+                    </Button>
+                    <Button
+                        Background="Lime"
+                        FontAttributes="Bold"
+                        TextColor="{StaticResource WhiteText}"
+                        ToolTipProperties.Text="Save">
+                        <Button.ImageSource>
+                            <FontImageSource
+                                FontFamily="MaterialSharp"
+                                Glyph="{x:Static m:MaterialSharp.Save}"
+                                Size="20" />
+                        </Button.ImageSource>
+                    </Button>
+                </HorizontalStackLayout>
+                <material:TextField
+                    Title="Search..."
+                    Grid.Row="1"
+                    AllowClear="True"
+                    TextColor="{StaticResource Primary}">
+                    <material:TextField.Icon>
+                        <FontImageSource FontFamily="MaterialSharp" Glyph="{x:Static m:MaterialSharp.Search}" />
+                    </material:TextField.Icon>
+                </material:TextField>
+            </Grid>
+
+
+            <material:DataGrid Margin="16,0,16,0" ItemsSource="{Binding FoodTypeMapDetailDtos}">
+
+
+                <material:DataGrid.Columns>
+
+                    <material:DataGridColumn
+                        Title="Recipe Name"
+                        Width="1.5*"    
+                        ValueBinding="{Binding RecipeName}" />
+
+                    <material:DataGridColumn
+                        Title="Food Type Name"
+                        Width="1.5*"
+                        ValueBinding="{Binding FoodTypeName}" />
+
+                    <material:DataGridColumn Title="Actions" Width="*">
+                        <material:DataGridColumn.CellItemTemplate>
+                            <DataTemplate>
+                                <Button
+                                    Background="PaleVioletRed"
+                                    HorizontalOptions="Center"
+                                    Text="Remove" />
+                            </DataTemplate>
+                        </material:DataGridColumn.CellItemTemplate>
+                    </material:DataGridColumn>
+                    <material:DataGridColumn Title="Is Deleted ?" Width="*">
+                        <material:DataGridColumn.CellItemTemplate>
+                            <DataTemplate x:DataType="dto:FoodTypeMapDetailDto">
+                                <material:CheckBox HorizontalOptions="Center" IsChecked="{Binding IsDeleted}" />
+                            </DataTemplate>
+                        </material:DataGridColumn.CellItemTemplate>
+                    </material:DataGridColumn>
+
+                </material:DataGrid.Columns>
+            </material:DataGrid>
+
+
+
+
+        </VerticalStackLayout>
+    </ScrollView>
+
 </ContentPage>
